--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 
           <div class="grid-container">
             <div class="product-card">
-              <div class="rank">1</div>
+              <div class="card-bg"></div>
+              <div class="rank">%</div>
               <div class="card-front">
                 <img
                   class="product-img"
@@ -146,11 +147,10 @@
                   </div>
                 </div>
               </div>
-
-              <div class="card-bg"></div>
             </div>
             <div class="product-card">
-              <div class="rank">1</div>
+              <div class="card-bg"></div>
+              <div class="rank">%</div>
               <div class="card-front">
                 <img
                   class="product-img"
@@ -197,11 +197,10 @@
                   </div>
                 </div>
               </div>
-
-              <div class="card-bg"></div>
             </div>
             <div class="product-card">
-              <div class="rank">1</div>
+              <div class="card-bg"></div>
+              <div class="rank">%</div>
               <div class="card-front">
                 <img
                   class="product-img"
@@ -248,11 +247,10 @@
                   </div>
                 </div>
               </div>
-
-              <div class="card-bg"></div>
             </div>
             <div class="product-card">
-              <div class="rank">1</div>
+              <div class="card-bg"></div>
+              <div class="rank">%</div>
               <div class="card-front">
                 <img
                   class="product-img"
@@ -299,69 +297,156 @@
                   </div>
                 </div>
               </div>
-
+            </div>
+            <div class="product-card">
               <div class="card-bg"></div>
-            </div>
+              <div class="rank">%</div>
+              <div class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <div class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </div>
+                </div>
+              </div>
 
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
+              <div class="card-back">
+                <div class="ratings">
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-half.svg.svg" alt="" />
+                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+                </div>
+                <p class="product-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Praesentium repellendus esse aliquid?
+                </p>
+                <div class="labels">
+                  <button class="label1">Keyboard</button>
+                  <button class="label1">Royal Kludge</button>
+                  <button class="label1">white</button>
+                </div>
+                <div class="price_cart">
+                  <p class="price">399</p>
+                  <div class="cart">
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
+              <div class="card-bg"></div>
+              <div class="rank">%</div>
+              <div class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <div class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <div class="card-back">
+                <div class="ratings">
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-half.svg.svg" alt="" />
+                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+                </div>
+                <p class="product-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Praesentium repellendus esse aliquid?
+                </p>
+                <div class="labels">
+                  <button class="label1">Keyboard</button>
+                  <button class="label1">Royal Kludge</button>
+                  <button class="label1">white</button>
+                </div>
+                <div class="price_cart">
+                  <p class="price">399</p>
+                  <div class="cart">
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
-            </div>
-            <div class="product-card">
-              <p class="product-card__title">Product 1</p>
-              <p class="product-card__details">This is a fancy keyboard</p>
-              <p class="product-card__price">$399</p>
+              <div class="card-bg"></div>
+              <div class="rank">%</div>
+              <div class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <div class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <div class="card-back">
+                <div class="ratings">
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-half.svg.svg" alt="" />
+                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+                </div>
+                <p class="product-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Praesentium repellendus esse aliquid?
+                </p>
+                <div class="labels">
+                  <button class="label1">Keyboard</button>
+                  <button class="label1">Royal Kludge</button>
+                  <button class="label1">white</button>
+                </div>
+                <div class="price_cart">
+                  <p class="price">399</p>
+                  <div class="cart">
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
