fixed the overlapping issue

--- a/index.html
+++ b/index.html
@@ -101,26 +101,8 @@
             <div class="product-card">
               <div class="card-bg"></div>
               <div class="discount">%</div>
-              <figure class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Royal Kludge RK84</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </figure>
 
-              <div class="card-back">
+              <section class="card-back">
                 <div class="ratings">
                   <img src="./images/icons/star-full.svg.svg" alt="" />
                   <img src="./images/icons/star-full.svg.svg" alt="" />
@@ -146,31 +128,31 @@
                     />
                   </figure>
                 </div>
-              </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
             </div>
             <div class="product-card">
               <div class="card-bg"></div>
               <div class="discount">%</div>
-              <figure class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Royal Kludge RK84</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </figure>
 
-              <div class="card-back">
+              <section class="card-back">
                 <div class="ratings">
                   <img src="./images/icons/star-full.svg.svg" alt="" />
                   <img src="./images/icons/star-full.svg.svg" alt="" />
@@ -196,31 +178,31 @@
                     />
                   </figure>
                 </div>
-              </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
             </div>
             <div class="product-card">
               <div class="card-bg"></div>
               <div class="discount">%</div>
-              <figure class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Royal Kludge RK84</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </figure>
 
-              <div class="card-back">
+              <section class="card-back">
                 <div class="ratings">
                   <img src="./images/icons/star-full.svg.svg" alt="" />
                   <img src="./images/icons/star-full.svg.svg" alt="" />
@@ -246,31 +228,31 @@
                     />
                   </figure>
                 </div>
-              </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
             </div>
             <div class="product-card">
               <div class="card-bg"></div>
               <div class="discount">%</div>
-              <figure class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Royal Kludge RK84</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </figure>
 
-              <div class="card-back">
+              <section class="card-back">
                 <div class="ratings">
                   <img src="./images/icons/star-full.svg.svg" alt="" />
                   <img src="./images/icons/star-full.svg.svg" alt="" />
@@ -296,31 +278,31 @@
                     />
                   </figure>
                 </div>
-              </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
             </div>
             <div class="product-card">
               <div class="card-bg"></div>
               <div class="discount">%</div>
-              <figure class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Royal Kludge RK84</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </figure>
 
-              <div class="card-back">
+              <section class="card-back">
                 <div class="ratings">
                   <img src="./images/icons/star-full.svg.svg" alt="" />
                   <img src="./images/icons/star-full.svg.svg" alt="" />
@@ -346,31 +328,31 @@
                     />
                   </figure>
                 </div>
-              </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
             </div>
             <div class="product-card">
               <div class="card-bg"></div>
               <div class="discount">%</div>
-              <figure class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Royal Kludge RK84</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </figure>
 
-              <div class="card-back">
+              <section class="card-back">
                 <div class="ratings">
                   <img src="./images/icons/star-full.svg.svg" alt="" />
                   <img src="./images/icons/star-full.svg.svg" alt="" />
@@ -396,31 +378,31 @@
                     />
                   </figure>
                 </div>
-              </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
             </div>
             <div class="product-card">
               <div class="card-bg"></div>
               <div class="discount">%</div>
-              <figure class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Royal Kludge RK84</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </figure>
 
-              <div class="card-back">
+              <section class="card-back">
                 <div class="ratings">
                   <img src="./images/icons/star-full.svg.svg" alt="" />
                   <img src="./images/icons/star-full.svg.svg" alt="" />
@@ -446,31 +428,31 @@
                     />
                   </figure>
                 </div>
-              </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
             </div>
             <div class="product-card">
               <div class="card-bg"></div>
               <div class="discount">%</div>
-              <figure class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Royal Kludge RK84</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </figure>
 
-              <div class="card-back">
+              <section class="card-back">
                 <div class="ratings">
                   <img src="./images/icons/star-full.svg.svg" alt="" />
                   <img src="./images/icons/star-full.svg.svg" alt="" />
@@ -496,31 +478,31 @@
                     />
                   </figure>
                 </div>
-              </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
             </div>
             <div class="product-card">
               <div class="card-bg"></div>
               <div class="discount">%</div>
-              <figure class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Royal Kludge RK84</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </figure>
 
-              <div class="card-back">
+              <section class="card-back">
                 <div class="ratings">
                   <img src="./images/icons/star-full.svg.svg" alt="" />
                   <img src="./images/icons/star-full.svg.svg" alt="" />
@@ -546,7 +528,25 @@
                     />
                   </figure>
                 </div>
-              </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Royal Kludge RK84</h3>
+                <div class="product-price_icon">
+                  <p class="price">$399</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
             </div>
           </div>
         </section>
