--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- JS -->
-    <script src="js/index.js" type="module" defer></script>
-
     <!-- Styles -->
     <link rel="stylesheet" href="./css/style.css" />
+
+    <!-- JS -->
+    <script src="js/index.js" type="module"></script>
 
     <!-- Fonts and icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
