--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- JS -->
-    <script src="js/index.js" type="module" defer></script>
-
     <!-- Styles -->
 
     <link
@@ -14,6 +11,9 @@
       href="https://unpkg.com/flickity@3.0.0/dist/flickity.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
+
+    <!-- JS -->
+    <script src="js/index.js" type="module"></script>
 
     <!-- Fonts and icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
