Added keyboard class to product card

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
           <div class="grid-container">
 
-            <div class="product-card">
+            <div class="product-card keyboard">
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
