new scripts: compiler and three cleaners

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://unpkg.com/flickity@3.0.0/dist/flickity.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./cssMain/style.css" />
 
     <!-- JS -->
     <script src="js/index.js" type="module"></script>
