--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./cssMain/style.css" />
 
     <!-- JS -->
-    <script src="js/index.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
 
     <!-- Fonts and icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
