--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section class="welcome-container">
           <div class="welcome__text">
             <div class="text-container">
-              <p class="title title1">Most For</p>
+              <p class="title title1">Anything For</p>
               <p class="title title2">Mechanical Keyboards</p>
             </div>
           </div>
