--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       <header>
         <div class="nav-container">
           <h2 class="logo">KEYKAPS</h2>
-          <button class="test-btn">BIG ASS TEST BUTTON</button>
+          <button class="test-btn-filter">BIG ASS filter BUTTON</button>
+          <button class="test-btn-sort">BIG ASS sort BUTTON</button>
+
           <nav class="main-nav">
             <ul class="nav__list">
               <li class="full-nav">
@@ -132,6 +134,7 @@
               class="product-card Keyboard"
               data-color="Black,Blue"
               data-brand="Nuphy"
+              data-price="299"
             >
               <div class="card-bg"></div>
               <div class="discount">%</div>
@@ -182,7 +185,11 @@
                 </div>
               </section>
             </div>
-            <div class="product-card" data-brand="Nuphy" data-color="blue">
+            <div
+              class="product-card Keyboard"
+              data-brand="Nuphy"
+              data-color="Blue"
+            >
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -234,9 +241,9 @@
             </div>
 
             <div
-              class="product-card"
+              class="product-card Keyboard"
               data-brand="Royal Kludge"
-              data-color="green"
+              data-color="Green"
             >
               <div class="card-bg"></div>
               <div class="discount">%</div>
@@ -288,7 +295,7 @@
               </section>
             </div>
 
-            <div class="product-card">
+            <div class="product-card" data-color="">
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -339,7 +346,7 @@
               </section>
             </div>
 
-            <div class="product-card">
+            <div class="product-card" data-color="">
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -390,7 +397,7 @@
               </section>
             </div>
 
-            <div class="product-card">
+            <div class="product-card" data-color="">
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -441,7 +448,7 @@
               </section>
             </div>
 
-            <div class="product-card">
+            <div class="product-card" data-color="">
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -492,7 +499,7 @@
               </section>
             </div>
 
-            <div class="product-card">
+            <div class="product-card" data-color="">
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
@@ -543,7 +550,7 @@
               </section>
             </div>
 
-            <div class="product-card">
+            <div class="product-card" data-color="">
               <div class="card-bg"></div>
               <div class="discount">%</div>
 
